--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
 
         </div>
+        <div class="error">
+            <p>Invalid city name</p>
+        </div>
         <div class="weather">
             <img src="images/rain.png" class="weather-icon">
             <h1 class="temp">22°C</h1>
