--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="card">
-        <div class="search">
+        <div class="searchCity">
             <input type="text" placeholder="enter city name" spellcheck="false">
             <button><img src="images/search.png"></button>
 
@@ -18,10 +18,10 @@
             <p>Invalid city name</p>
         </div>
         <div class="weather">
-            <img src="images/rain.png" class="weather-icon">
+            <img src="images/rain.png" class="icon">
             <h1 class="temp">22°C</h1>
             <h2 class="city">New York</h2>
-            <div class="details">
+            <div class="weatherDetails">
                 <div class="col">
                     <img src="images/humidity.png">
                 <div>
